# Teltonika-Cloud_Connection

./: CMakeLists.txt  Makefile
src/: Makefile  arg_parser.c  arg_parser.h  daemon.c  daemon.h  device_info  main.c  tuya_connection.c  tuya_connection.h
